# typicalbot

./: .all-contributorsrc  .editorconfig  .env.example  .esdoc.json  .eslintrc  .eslintrc.json  .gitattributes  .gitignore  .prettierrc  .prettierrc.json  CHANGELOG.md  Dockerfile  LICENSE  README.md  Shard.js  config.example.json  docker-compose.yml  ecosystem.config.js  fix.txt  index.js  index.ts  log  package-lock.json  package.json  release.js  sharder.js  tsconfig.base.json  tsconfig.eslint.json  tsconfig.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.MD  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  ENHANCEMENT_SUGGESTION.md  FEATURE_REQUEST.md  (+1 more)
Express/: 404.html  app.js  app2.js  config.json
Source/: Client.js  CommandHandler.js  Database.js  Events.js  Functions.js  MusicUtil.js  source.js
api/: app.js
client/: index.js
cluster/: index.js
configs/: example.json
docs/: coverage.json  identifiers.html  index.html  index.json  source.html
etc/: config.example.json
express/: app.js
ipc/: app.js
manager/: index.js
old-src/: index.ts
patches/: discord.js+12.2.0.patch
scripts/: pm2.js  pm2.ts  setup.js  setup.ts
services/internal-api/: Cargo.toml
services/internal-api/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
services/internal-api/src/: announcement.rs  main.rs  response.rs  schema.rs
setup/: init.js
source/: client.js
src/: Shard.js  i18n.ts  index.js  index.ts  tsconfig.json
structures/: Shard.js
(+1857 files in other folders)
